agregadas las bandas

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="jumbotron jumbotron-fluid">
                         <div class="container">
                             <h1 class="display-3">JUMBOTRON PLUS</h1>
-                            <p class="lead">This is a Fluid jumbotron, a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+                            <p class="lead">METALLICA This is a Fluid jumbotron, a modified jumbotron that occupies the entire horizontal space of its parent.</p>
                         </div>
                     </div>
                 </div>
@@ -88,7 +88,7 @@
                   </a>
                   <a class="carousel-control-next" href="#mainCarousel" role="button" data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
+                    <span class="sr-only">Next SLAYER</span>
                   </a>
                     
                 </div>
@@ -107,7 +107,7 @@
                 <div class="col-sm-12 col-md-6">
                     <div class="row">
                         <div class="col-sm-12">
-                        <p id="justif">El índice S/P Merval perforó el pisó de 34.000 puntos, y se ubica en torno de los 33.092 puntos, influenciado por el clima político regional, tanto de los recientes sucesos en Bolivia, como de las expectativas negativas del futuro del Mercosur.</p>
+                        <p id="justif">El índice S/P Merval CANNIBAL CORPSE perforó el pisó de 34.000 puntos, y se ubica en torno de los 33.092 puntos, influenciado por el clima político regional, tanto de los recientes sucesos en Bolivia, como de las expectativas negativas del futuro del Mercosur.</p>
                         </div>
                     </div>
                     <div class="row">
